# KE

./: CMakeLists.txt  CMakePresets.json
editor/: CMakeLists.txt
editor/src/: editormain.cpp
engine/: CMakeLists.txt
engine/Include/: CoreMinimal.h
engine/Include/Core/: Collision.h  EngineTypes.h  KEExport.h  Object.h
engine/Include/KE/: Engine.h  EngineObject.h  ResourceManagerInterface.h
engine/Include/KE/Core/: Collision.h  CollisionSystem.h  Engine.h  EngineInfo.h  GLFWDispatcher.h  InputSystem.h  KeyDefines.h  Object.h  ObjectFactory.h
engine/Include/KE/GameFramework/: GameInstance.h  GameMode.h  GameModeSettings.h
engine/Include/KE/GameFramework/Actors/: Actor.h  HUD.h  PlayerStart.h  TerrainActor.h
engine/Include/KE/GameFramework/Actors/Controllers/: AIController.h  Controller.h  PlayerController.h
engine/Include/KE/GameFramework/Actors/Pawns/: CameraPawn.h  Character.h  Pawn.h
engine/Include/KE/GameFramework/Camera/: CameraComponent.h
engine/Include/KE/GameFramework/Components/: BaseComponent.h  CharacterMovementComponent.h  GravityComponent.h  InputComponent.h  MovementComponent.h  SceneComponent.h  TransformComponent.h
engine/Include/KE/GameFramework/Components/Collisions/: BaseCollisionComponent.h  BoxComponent.h  CapsuleComponent.h  ConeComponent.h  CylinderComponent.h  SphereComponent.h  TerrainComponent.h
engine/Include/KE/GameFramework/Components/Meshes/: BaseMeshComponent.h  StaticMeshComponent.h  TerrainMeshComponent.h
engine/Include/KE/GameFramework/Meshes/: BaseMesh.h
engine/Include/KE/GameFramework/World/: Level.h  World.h
engine/Include/KE/Render/: RenderInfo.h  Renderer.h  Window.h
engine/Include/KE/Render/Vulkan/: VulkanContext.h  VulkanInterface.h
engine/Include/KE/Render/Vulkan/Managers/: BufferManager.h  CommandManager.h  DescriptorManager.h  DeviceManager.h  PipelineManager.h  RenderPassManager.h  SwapChainManager.h  SyncManager.h  WireframePipeline.h
engine/Include/KE/Render/Vulkan/VertexStructs/: AllVertices.h  MeshVertex.h  TerrainVertex.h
engine/Include/KE/Systems/: CollisionSystem.h  GLFWDispatcher.h  InputSystem.h  RenderSystem.h  ResourceSystem.h  WindowSystem.h
engine/Include/KE/Systems/Managers/: MeshManager.h
engine/Include/KE/Utils/: Logger.h  MathGLMConverters.h
engine/Include/KE/Utils/Math/: CE_MathConstants.h  Color.h  MathTypes.h  Vector3D.h  Vector4.h
engine/Include/KE/Vulkan/: RenderInfo.h  VKManager.h  VKinfo.h  VulkanContext.h
engine/Include/KE/Vulkan/Managers/: BufferManager.h  CommandManager.h  DescriptorManager.h  DeviceManager.h  InstanceManager.h  PipelineConfig.h  PipelineManager.h  RenderPassManager.h  SwapchainManager.h  SyncManager.h  WireframePipeline.h
engine/Include/KE/Vulkan/VertexStructs/: AllVertices.h  FVertexInputDescription.h  WireframeVertex.h
engine/Include/Utils/: MathGLMConverters.h
engine/Include/Utils/Math/: CE_MathHelpers.h  Color.h  MathTypes.h  Matrix4.h  Quaternion.h  Vector2D.h
engine/Source/Engine/Core/: CollisionSystem.cpp  Engine.cpp  EngineInfo.cpp  InputSystem.cpp  Object.cpp
engine/Source/Engine/GameFramework/: GameInstance.cpp  GameMode.cpp
engine/Source/Engine/GameFramework/Actors/: Actor.cpp  HUD.cpp  PlayerStart.cpp  TerrainActor.cpp
engine/Source/Engine/GameFramework/Actors/Controllers/: AIController.cpp  Controller.cpp  PlayerController.cpp
engine/Source/Engine/GameFramework/Actors/Pawns/: Character.cpp  Pawn.cpp
engine/Source/Engine/GameFramework/Camera/: CameraComponent.cpp
engine/Source/Engine/GameFramework/Components/: BaseComponent.cpp  CharacterMovementComponent.cpp  GravityComponent.cpp  InputComponent.cpp  MovementComponent.cpp  SceneComponent.cpp  TransformComponent.cpp
engine/Source/Engine/GameFramework/Components/Collisions/: BaseCollisionComponent.cpp  BoxComponent.cpp  CapsuleComponent.cpp  ConeComponent.cpp  CylinderComponent.cpp  SphereComponent.cpp  TerrainComponent.cpp
engine/Source/Engine/GameFramework/Components/Meshes/: BaseMeshComponent.cpp  StaticMeshComponent.cpp  TerrainMeshComponent.cpp
engine/Source/Engine/GameFramework/World/: Level.cpp  World.cpp
engine/Source/Engine/Render/: RenderInfo.cpp  Renderer.cpp  Window.cpp
engine/Source/Engine/Render/Vulkan/: VulkanContext.cpp
engine/Source/Engine/Render/Vulkan/Managers/: BufferManager.cpp  CommandManager.cpp  DescriptorManager.cpp  DeviceManager.cpp  PipelineManager.cpp  RenderPassManager.cpp  SwapChainManager.cpp  SyncManager.cpp  WireframePipeline.cpp
engine/Source/Engine/Render/Vulkan/VertexStructs/: MeshVertex.cpp  TerrainVertex.cpp  (+1 more)
engine/Source/KE/: Engine.cpp
engine/Source/KE/Core/: Collision.cpp  Object.cpp  ObjectFactory.cpp
engine/Source/KE/GameFramework/: GameInstance.cpp  GameMode.cpp
engine/Source/KE/GameFramework/Actors/: Actor.cpp  HUD.cpp  PlayerStart.cpp  TerrainActor.cpp
engine/Source/KE/GameFramework/Camera/: CameraComponent.cpp
engine/Source/KE/GameFramework/Components/: BaseComponent.cpp  CharacterMovementComponent.cpp  GravityComponent.cpp  InputComponent.cpp  MovementComponent.cpp  SceneComponent.cpp  TransformComponent.cpp
engine/Source/KE/GameFramework/Meshes/: BaseMesh.cpp
engine/Source/KE/GameFramework/World/: Level.cpp  World.cpp
engine/Source/KE/Systems/: CollisionSystem.cpp  InputSystem.cpp  RenderSystem.cpp  ResourceSystem.cpp  WindowSystem.cpp
engine/Source/KE/Systems/Managers/: MeshManager.cpp
engine/Source/KE/Vulkan/: RenderInfo.cpp  VKinfo.cpp  VulkanContext.cpp
engine/Source/KE/Vulkan/Managers/: BufferManager.cpp  CommandManager.cpp  DescriptorManager.cpp  DeviceManager.cpp  InstanceManager.cpp  PipelineConfig.cpp  PipelineManager.cpp  RenderPassManager.cpp  SwapchainManager.cpp  SyncManager.cpp  WireframePipeline.cpp
engine/Source/KE/Vulkan/VertexStructs/: MeshVertex.cpp  TerrainVertex.cpp  WireframeVertex.cpp
engine/Source/Utils/: logger.cpp
engine/Source/Utils/Math/: Color.cpp  MathConstants.cpp  MathHelpers.cpp  Matrix4.cpp  Quaternion.cpp  Vector2D.cpp  Vector3D.cpp  Vector4.cpp
game/: CMakeLists.txt
game/include/: test.h
game/src/: gamemain.cpp  test.cpp  test.h
(+23 files in other folders)
